k8s/services/routinator/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: routinator
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - routinator.as212024.net
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: routinator
          port: 80
