k8s/services/routinator/app/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routinator
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: routinator.as212024.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: routinator
                port:
                  name: http
  tls:
    - hosts:
        - routinator.as212024.net
      secretName: routinator-tls
