k8s/services/routinator/app/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-all
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - all
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-rpki
spec:
  endpointSelector: {}
  ingress:
    - toPorts:
        - ports:
            - port: "3323"
              protocol: TCP
